force-app/main/default/objects/OpportunityLineItem/fields/Explorer__c.field-meta.xml
<CustomField>
    <fullName>Explorer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Explorer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Adventure Package</relationshipLabel>
    <relationshipName>Adventure_Package</relationshipName>
    <type>Lookup</type>
</CustomField>