force-app/main/default/objects/OpportunityLineItem/fields/Fulfillment_Created_1__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Created_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fulfillment Created_1</label>
    <type>Checkbox</type>
</CustomField>