force-app/main/default/objects/OpportunityLineItem/fields/Fulfillment_Created__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fulfillment Created</label>
    <type>Checkbox</type>
</CustomField>