force-app/main/default/objects/OpportunityLineItem/fields/Fulfillment_State__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_State__c</fullName>
    <label>Fulfillment State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Not Created</fullName>
                <default>true</default>
                <label>Not Created</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>