force-app/main/default/objects/OpportunityLineItem/fields/FulfillmentId__c.field-meta.xml
<CustomField>
    <fullName>FulfillmentId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>FulfillmentId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>