force-app/main/default/objects/OpportunityLineItem/fields/Needs_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Needs_Insurance__c</fullName>
    <formula>PricebookEntry.Product2.Needs_Insurance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Needs Insurance</label>
    <type>Checkbox</type>
</CustomField>