force-app/main/default/objects/OpportunityLineItem/fields/Needs_Waiver__c.field-meta.xml
<CustomField>
    <fullName>Needs_Waiver__c</fullName>
    <formula>PricebookEntry.Product2.Needs_Waiver__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Needs Waiver</label>
    <type>Checkbox</type>
</CustomField>